# ai_codegen_pro

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  start.sh
.github/workflows/: ci.yml
ai_codegen_pro/: .ai_codegen_pro_config.example.json  README.md  main_window.py.bak  requirements.txt
ai_codegen_pro/cli/: __init__.py  main.py
ai_codegen_pro/core/: model_router.py  multi_file_codegen.py  multi_file_generator.py  openrouter_client.py  template_service.py  template_service.py.backup
ai_codegen_pro/core/providers/: openrouter_client.py
ai_codegen_pro/gui/: __main__.py  codegen_worker.py  main_window.py  main_window.py.backup  model_loader_thread.py  orange_dark.qss  settings_dialog.py  template_editor.py
ai_codegen_pro/gui/themes/: __init__.py  base_theme.py  (+3 more)
ai_codegen_pro/plugins/: __init__.py  base.py  export_zip.py  manager.py  registry.py
ai_codegen_pro/templates/: bash_script.j2  cli_tool.j2  dockerfile.j2  go_module.j2  markdown_doc.j2  node_module.j2  pydantic_model.j2  python_module.j2  service.j2  service_fastapi.j2  test.j2
ai_codegen_pro/tests/: test_modelrouter_template.py  test_multi_file_codegen.py  test_multi_file_codegen_edge.py  test_openrouter_client.py  test_openrouter_mocked.py  test_template_errors.py
ai_codegen_pro/utils/: exporter.py  logger_service.py  settings_manager.py  settings_service.py
alt_gui/: alternative_gui.py  theme.qss
src/ai_codegen_pro/: requirements-dev.txt  requirements.txt
tests/integration/: test_generate_and_export.py
(+32 files in other folders)
