[project]
name = "ai-codegen-pro"
version = "v0.1"
description = "Modulares KI-Codegenerierungstool mit Multi-Model-Orchestration"
authors = [
    {name = "David Grunert"}
]
license = {text = "MIT-Lizenz"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "anthropic (>=0.59.0,<0.60.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "cookiecutter (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.0"

